[package]
name = "etvr-openxr-layer"
version = "0.1.0"
edition = "2021"

[lib]
name         = "etvr_openxr_layer"
crate-type   = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
openxr-sys = "0.10.0"
quaternion-core = "0.5.0"
rosc = "0.10.1"

